--- a/package.json
+++ b/package.json
@@ -12,12 +12,14 @@
     "@headlessui/react": "^1.7.19",
     "animate.css": "^4.1.1",
     "axios": "^1.6.8",
+    "moment": "^2.30.1",
     "next": "14.1.4",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.51.3",
     "react-icons": "^5.0.1",
     "react-slick": "^0.30.2",
+    "react-toastify": "^10.0.5",
     "sharp": "^0.33.3",
     "slick-carousel": "^1.8.1"
   },
