--- a/package.json
+++ b/package.json
@@ -9,19 +9,24 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.5",
     "@headlessui/react": "^1.7.19",
+    "@mui/material": "^5.15.16",
+    "@mui/styled-engine-sc": "^6.0.0-alpha.18",
     "animate.css": "^4.1.1",
     "axios": "^1.6.8",
     "moment": "^2.30.1",
     "next": "14.1.4",
-    "react": "^18",
-    "react-dom": "^18",
+    "react": "^17.0.0 || ^18.0.0",
+    "react-dom": "^17.0.0 || ^18.0.0",
     "react-hook-form": "^7.51.3",
     "react-icons": "^5.0.1",
     "react-slick": "^0.30.2",
     "react-toastify": "^10.0.5",
     "sharp": "^0.33.3",
-    "slick-carousel": "^1.8.1"
+    "slick-carousel": "^1.8.1",
+    "styled-components": "^6.1.9"
   },
   "devDependencies": {
     "@types/node": "^20",
@@ -35,5 +40,9 @@
     "postcss": "^8",
     "tailwindcss": "^3.3.0",
     "typescript": "^5"
+  },
+  "peerDependencies": {
+    "react": "^17.0.0 || ^18.0.0",
+    "react-dom": "^17.0.0 || ^18.0.0"
   }
 }
