--- a/package.json
+++ b/package.json
@@ -14,13 +14,14 @@
     "@headlessui/react": "^1.7.19",
     "@mui/material": "^5.15.16",
     "@mui/styled-engine-sc": "^6.0.0-alpha.18",
+    "@preact/signals": "^1.2.3",
     "animate.css": "^4.1.1",
     "axios": "^1.6.8",
     "moment": "^2.30.1",
     "next": "14.1.4",
     "react": "^17.0.0 || ^18.0.0",
     "react-dom": "^17.0.0 || ^18.0.0",
-    "react-hook-form": "^7.51.3",
+    "react-hook-form": "^7.51.4",
     "react-icons": "^5.0.1",
     "react-slick": "^0.30.2",
     "react-toastify": "^10.0.5",
