--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@mui/styled-engine-sc": "^6.0.0-alpha.18",
     "@preact/signals": "^1.2.3",
     "animate.css": "^4.1.1",
+    "antd": "^5.17.3",
     "axios": "^1.6.8",
     "moment": "^2.30.1",
     "next": "14.1.4",
