--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "animate.css": "^4.1.1",
     "antd": "^5.17.3",
     "axios": "^1.6.8",
+    "framer-motion": "^11.2.10",
     "moment": "^2.30.1",
     "next": "14.1.4",
     "react": "^17.0.0 || ^18.0.0",
