--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@preact/signals": "^1.2.3",
     "animate.css": "^4.1.1",
     "antd": "^5.17.3",
+    "aos": "^2.3.4",
     "axios": "^1.6.8",
     "dompurify": "^3.2.5",
     "framer-motion": "^11.2.10",
@@ -34,6 +35,7 @@
     "styled-components": "^6.1.9"
   },
   "devDependencies": {
+    "@types/aos": "^3.0.7",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
