--- a/main/package.json
+++ b/main/package.json
@@ -24,6 +24,7 @@
     "highlight.js": "^11.11.1",
     "moment": "^2.30.1",
     "next": "14.1.4",
+    "next-themes": "^0.4.6",
     "react": "^17.0.0 || ^18.0.0",
     "react-dom": "^17.0.0 || ^18.0.0",
     "react-hook-form": "^7.51.4",
