--- a/backend/package.json
+++ b/backend/package.json
@@ -14,13 +14,15 @@
   "dependencies": {
     "@supabase/supabase-js": "^2.49.4",
     "@types/bcrypt": "^5.0.2",
+    "axios": "^1.9.0",
     "bcrypt": "^5.1.1",
     "cookie-parser": "^1.4.7",
     "express": "^4.18.3",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.2.1",
     "multer": "^1.4.5-lts.2",
-    "nodemailer": "^6.9.13"
+    "nodemailer": "^6.9.13",
+    "request-ip": "^3.3.0"
   },
   "devDependencies": {
     "@types/cookie-parser": "^1.4.8",
@@ -30,6 +32,7 @@
     "@types/morgan": "^1.9.9",
     "@types/multer": "^1.4.12",
     "@types/nodemailer": "^6.4.15",
+    "@types/request-ip": "^0.0.41",
     "base64-arraybuffer": "^1.0.2",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
